--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.7.9",
+    "e-commerce-website": "file:..",
+    "lucide-react": "^0.477.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
