--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,5 +35,5 @@
     "globals": "^15.14.0",
     "vite": "^6.0.5"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://e-commerce-platform-hbbx.onrender.com"
 }
