--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@shadcn/ui": "^0.0.4",
+    "@stripe/stripe-js": "^7.3.1",
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.7.9",
     "e-commerce-website": "file:..",
@@ -21,6 +22,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.1",
+    "stripe": "^18.2.1",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
